Update image links

--- a/notebooks/1-data-collection.ipynb
+++ b/notebooks/1-data-collection.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![steam_logo](../figures/steam_logo_white.jpg)\n",
+    "![steam_logo](https://nik-davis.github.io/images/steam_logo_white.jpg)\n",
     "\n",
     "The first time I used Steam was with an account I can't remember the name of, playing a game which could well have been [Dark Messiah of Might & Magic](https://store.steampowered.com/app/2100/Dark_Messiah_of_Might__Magic/), on a computer that would easily be blown away by the processing power of my phone today.\n",
     "\n",
@@ -21,18 +21,21 @@
     "\n",
     "In order to play the multiplayer component of the game, I had to install an annoying piece of third-party software I had never heard of called Steam, creating the account I have long since lost in the process. Here's what that software probably looked like at the time:\n",
     "\n",
-    "<img src=\"../figures/steam_store_2006.jpg\" width=\"700\">\n",
-    "<center>Source: <a href=https://www.pcgamer.com/uk/steam-versions/>pcgamer</a></center>\n",
+    "<p class=\"source\" style=\"text-align: center\"><img src=\"https://nik-davis.github.io/images/steam_store_2006.jpg\" width=\"700\">Source: <a href=\"https://gfycat.com/@pcgevan\">pcgevan</a> via <a href=https://www.pcgamer.com/uk/steam-versions/>PC Gamer</a></p>\n",
     "\n",
-    "Fast-forward a little over 10 years and the [Steam store](https://en.wikipedia.org/wiki/Steam_(software)) is huge, ubiquitous as the home of PC gaming and distribution. Whilst physical copies still just about feel at home on consoles, the PC market has long since moved digital. In case you are not familiar with it, Steam is a digital store for purchasing, downloading and playing video games. It hosts a variety of community features, allows pushing game updates to users automatically, and gathers news stories relevant to each title. It's a bit like [Google's Play Store](https://play.google.com) or [Apple's App Store](https://www.apple.com/uk/ios/app-store/) for phones.\n",
+    "Fast-forward a little over 10 years and the <a href=\"https://en.wikipedia.org/wiki/Steam_(software)\">Steam Store</a> is huge, ubiquitous as the home of PC gaming and distribution. Whilst physical copies still just about feel at home on consoles, the PC market has long since moved digital. In case you are not familiar with it, Steam is a digital store for purchasing, downloading and playing video games. It hosts a variety of community features, allows pushing game updates to users automatically, and gathers news stories relevant to each title. It's a bit like [Google's Play Store](https://play.google.com) or [Apple's App Store](https://www.apple.com/uk/ios/app-store/) for phones.\n",
     "\n",
     "A large part of Steam's success as a platform is due to its use of freqeuent sales, convenience, and the shift to digital over physical. Whilst other platforms are emerging and gaining traction, there is likely no better resource for examining gaming over the last decade. With that in mind, if we can construct a data set we will have a wealth of information about [nearly 30,000 games](https://store.steampowered.com/about/) released since 2003, when Steam first launched.\n",
     "\n",
     "# Project Goals\n",
     "\n",
+    "<!-- PELICAN_BEGIN_SUMMARY -->\n",
+    "\n",
     "The motivation for this project is to download, process and analyse a data set of Steam apps (games) from the Steam store, and gain insights into what makes a game more successful in terms of sales, play-time and ratings. We will imagine that we have been approached by a company hoping to develop and release a new title, using the findings we provide them to inform decisions about how best to manage their budget and hopefully increase the success of their release.\n",
     "\n",
     "The first step will be tackling data collection - the actual retrieval of data from Steam's servers and databases. In future we'll look at cleaning the data, transforming it into a more useful state, then on to data exploration and analysis. Finally we'll summarise our findings in a non-technical report which would be sent to the fictional company in question.\n",
+    "\n",
+    "<!-- PELICAN_END_SUMMARY -->\n",
     "\n",
     "At the end of the data collection and cleaning stages, we'd like to end up with a table or database like this:\n",
     "\n",
