--- a/notebooks/1-data-collection.ipynb
+++ b/notebooks/1-data-collection.ipynb
@@ -41,7 +41,7 @@
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>3.7.3 64bit [MSC v.1900 64 bit (AMD64)]</td></tr><tr><td>IPython</td><td>7.5.0</td></tr><tr><td>OS</td><td>Windows 10 10.0.17763 SP0</td></tr><tr><td>numpy</td><td>1.16.3</td></tr><tr><td>pandas</td><td>0.24.2</td></tr><tr><td colspan='2'>Tue May 28 17:38:49 2019 GMT Summer Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>3.7.3 64bit [MSC v.1900 64 bit (AMD64)]</td></tr><tr><td>IPython</td><td>7.5.0</td></tr><tr><td>OS</td><td>Windows 10 10.0.17763 SP0</td></tr><tr><td>numpy</td><td>1.16.3</td></tr><tr><td>pandas</td><td>0.24.2</td></tr><tr><td colspan='2'>Wed May 29 10:44:08 2019 GMT Summer Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -51,7 +51,7 @@
        "OS & Windows 10 10.0.17763 SP0 \\\\ \\hline\n",
        "numpy & 1.16.3 \\\\ \\hline\n",
        "pandas & 0.24.2 \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Tue May 28 17:38:49 2019 GMT Summer Time} \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Wed May 29 10:44:08 2019 GMT Summer Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -61,7 +61,7 @@
        "OS Windows 10 10.0.17763 SP0\n",
        "numpy 1.16.3\n",
        "pandas 0.24.2\n",
-       "Tue May 28 17:38:49 2019 GMT Summer Time"
+       "Wed May 29 10:44:08 2019 GMT Summer Time"
       ]
      },
      "execution_count": 1,
@@ -147,7 +147,7 @@
     "\n",
     "[SteamSpy](https://steamspy.com/about) is a Steam stats-gathering service and crucially has data easily available through its own API (documentation [here](https://steamspy.com/api.php)). It provides a number of useful metrics including an estimation for total owners of each game.\n",
     "\n",
-    "We'll be retrieving data from both APIs and combining them to form our dataset. For the purposes of this project, we'll be performing as little data cleaning as possible at this stage, providing wonderfully dirty data for data cleaning, the next step in this project.\n",
+    "We'll be retrieving data from both APIs and combining them to form our dataset. For the purposes of this project, we'll be performing as little data cleaning as possible at this stage, providing 'dirty' data for data cleaning, the next step in this project.\n",
     "\n",
     "## Section outline:\n",
     "\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -332,7 +332,7 @@
        "4     50  Half-Life: Opposing Force"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,9 +546,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting at index 0:\n",
+      "\n",
+      "Exported lines 0-4 to steam_app_data.csv. Batch 0 time: 0:00:10 (avg: 0:00:10, remaining: 0:00:10)\n",
+      "Exported lines 5-9 to steam_app_data.csv. Batch 1 time: 0:00:10 (avg: 0:00:10, remaining: 0:00:00)\n",
+      "\n",
+      "Processing batches complete. 10 apps written\n"
+     ]
+    }
+   ],
    "source": [
     "def parse_steam_request(appid, name):\n",
     "    \"\"\"Unique parser to handle data from steam store api.\n",
@@ -606,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -709,7 +722,7 @@
        "      <td>[{'id': '1', 'description': 'Action'}]</td>\n",
        "      <td>[{'id': 0, 'path_thumbnail': 'https://steamcdn...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'total': 66049}</td>\n",
+       "      <td>{'total': 66228}</td>\n",
        "      <td>{'total': 0}</td>\n",
        "      <td>{'coming_soon': False, 'date': '1 Nov, 2000'}</td>\n",
        "      <td>{'url': 'http://steamcommunity.com/app/10', 'e...</td>\n",
@@ -751,7 +764,7 @@
        "      <td>[{'id': '1', 'description': 'Action'}]</td>\n",
        "      <td>[{'id': 0, 'path_thumbnail': 'https://steamcdn...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'total': 2807}</td>\n",
+       "      <td>{'total': 2817}</td>\n",
        "      <td>{'total': 0}</td>\n",
        "      <td>{'coming_soon': False, 'date': '1 Apr, 1999'}</td>\n",
        "      <td>{'url': '', 'email': ''}</td>\n",
@@ -793,7 +806,7 @@
        "      <td>[{'id': '1', 'description': 'Action'}]</td>\n",
        "      <td>[{'id': 0, 'path_thumbnail': 'https://steamcdn...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'total': 2000}</td>\n",
+       "      <td>{'total': 2012}</td>\n",
        "      <td>{'total': 0}</td>\n",
        "      <td>{'coming_soon': False, 'date': '1 May, 2003'}</td>\n",
        "      <td>{'url': '', 'email': ''}</td>\n",
@@ -835,7 +848,7 @@
        "      <td>[{'id': '1', 'description': 'Action'}]</td>\n",
        "      <td>[{'id': 0, 'path_thumbnail': 'https://steamcdn...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'total': 940}</td>\n",
+       "      <td>{'total': 942}</td>\n",
        "      <td>{'total': 0}</td>\n",
        "      <td>{'coming_soon': False, 'date': '1 Jun, 2001'}</td>\n",
        "      <td>{'url': '', 'email': ''}</td>\n",
@@ -877,7 +890,7 @@
        "      <td>[{'id': '1', 'description': 'Action'}]</td>\n",
        "      <td>[{'id': 0, 'path_thumbnail': 'https://steamcdn...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>{'total': 4388}</td>\n",
+       "      <td>{'total': 4401}</td>\n",
        "      <td>{'total': 0}</td>\n",
        "      <td>{'coming_soon': False, 'date': '1 Nov, 1999'}</td>\n",
        "      <td>{'url': 'https://help.steampowered.com', 'emai...</td>\n",
@@ -1009,11 +1022,11 @@
        "4  [{'id': '1', 'description': 'Action'}]   \n",
        "\n",
        "                                         screenshots movies   recommendations  \\\n",
-       "0  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN  {'total': 66049}   \n",
-       "1  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 2807}   \n",
-       "2  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 2000}   \n",
-       "3  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN    {'total': 940}   \n",
-       "4  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 4388}   \n",
+       "0  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN  {'total': 66228}   \n",
+       "1  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 2817}   \n",
+       "2  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 2012}   \n",
+       "3  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN    {'total': 942}   \n",
+       "4  [{'id': 0, 'path_thumbnail': 'https://steamcdn...    NaN   {'total': 4401}   \n",
        "\n",
        "   achievements                                   release_date  \\\n",
        "0  {'total': 0}  {'coming_soon': False, 'date': '1 Nov, 2000'}   \n",
@@ -1044,7 +1057,7 @@
        "4                         {'ids': [], 'notes': None}  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,9 +1080,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting at index 0:\n",
+      "\n",
+      "Exported lines 0-4 to steamspy_data.csv. Batch 0 time: 0:00:04 (avg: 0:00:04, remaining: 0:00:13)\n",
+      "Exported lines 5-9 to steamspy_data.csv. Batch 1 time: 0:00:04 (avg: 0:00:04, remaining: 0:00:08)\n",
+      "Exported lines 10-14 to steamspy_data.csv. Batch 2 time: 0:00:05 (avg: 0:00:04, remaining: 0:00:04)\n",
+      "Exported lines 15-19 to steamspy_data.csv. Batch 3 time: 0:00:04 (avg: 0:00:04, remaining: 0:00:00)\n",
+      "\n",
+      "Processing batches complete. 20 apps written\n"
+     ]
+    }
+   ],
    "source": [
     "def parse_steamspy_request(appid, name):\n",
     "    \"\"\"Parser to handle steamspy api data.\"\"\"\n",
@@ -1110,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1164,21 +1192,21 @@
        "      <td>Valve</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>124948</td>\n",
-       "      <td>3362</td>\n",
+       "      <td>124829</td>\n",
+       "      <td>3352</td>\n",
        "      <td>0</td>\n",
        "      <td>10,000,000 .. 20,000,000</td>\n",
-       "      <td>12501</td>\n",
-       "      <td>659</td>\n",
-       "      <td>151</td>\n",
-       "      <td>912</td>\n",
+       "      <td>9582</td>\n",
+       "      <td>508</td>\n",
+       "      <td>206</td>\n",
+       "      <td>669</td>\n",
        "      <td>999</td>\n",
        "      <td>999</td>\n",
        "      <td>0</td>\n",
        "      <td>English, French, German, Italian, Spanish - Sp...</td>\n",
        "      <td>Action</td>\n",
-       "      <td>14027</td>\n",
-       "      <td>{'Action': 2683, 'FPS': 2050, 'Multiplayer': 1...</td>\n",
+       "      <td>14984</td>\n",
+       "      <td>{'Action': 2682, 'FPS': 2049, 'Multiplayer': 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1187,21 +1215,21 @@
        "      <td>Valve</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3326</td>\n",
-       "      <td>636</td>\n",
+       "      <td>3325</td>\n",
+       "      <td>637</td>\n",
        "      <td>0</td>\n",
        "      <td>5,000,000 .. 10,000,000</td>\n",
-       "      <td>35</td>\n",
+       "      <td>268</td>\n",
        "      <td>0</td>\n",
-       "      <td>10</td>\n",
+       "      <td>356</td>\n",
        "      <td>0</td>\n",
        "      <td>499</td>\n",
        "      <td>499</td>\n",
        "      <td>0</td>\n",
        "      <td>English, French, German, Italian, Spanish - Sp...</td>\n",
        "      <td>Action</td>\n",
-       "      <td>73</td>\n",
-       "      <td>{'Action': 208, 'FPS': 188, 'Multiplayer': 172...</td>\n",
+       "      <td>77</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1210,20 +1238,20 @@
        "      <td>Valve</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3433</td>\n",
-       "      <td>402</td>\n",
+       "      <td>3427</td>\n",
+       "      <td>403</td>\n",
        "      <td>0</td>\n",
        "      <td>5,000,000 .. 10,000,000</td>\n",
-       "      <td>138</td>\n",
+       "      <td>90</td>\n",
        "      <td>0</td>\n",
-       "      <td>58</td>\n",
+       "      <td>6</td>\n",
        "      <td>0</td>\n",
        "      <td>499</td>\n",
        "      <td>499</td>\n",
        "      <td>0</td>\n",
        "      <td>English, French, German, Italian, Spanish - Spain</td>\n",
        "      <td>Action</td>\n",
-       "      <td>100</td>\n",
+       "      <td>124</td>\n",
        "      <td>{'FPS': 139, 'World War II': 123, 'Multiplayer...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1233,20 +1261,20 @@
        "      <td>Valve</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1282</td>\n",
+       "      <td>1281</td>\n",
        "      <td>271</td>\n",
        "      <td>0</td>\n",
        "      <td>5,000,000 .. 10,000,000</td>\n",
-       "      <td>114</td>\n",
+       "      <td>24</td>\n",
        "      <td>0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>34</td>\n",
        "      <td>0</td>\n",
        "      <td>499</td>\n",
        "      <td>499</td>\n",
        "      <td>0</td>\n",
        "      <td>English, French, German, Italian, Spanish - Sp...</td>\n",
        "      <td>Action</td>\n",
-       "      <td>3</td>\n",
+       "      <td>10</td>\n",
        "      <td>{'Action': 85, 'FPS': 72, 'Multiplayer': 59, '...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1256,13 +1284,13 @@
        "      <td>Gearbox Software</td>\n",
        "      <td>Valve</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5280</td>\n",
-       "      <td>293</td>\n",
+       "      <td>5272</td>\n",
+       "      <td>291</td>\n",
        "      <td>0</td>\n",
        "      <td>5,000,000 .. 10,000,000</td>\n",
-       "      <td>611</td>\n",
+       "      <td>215</td>\n",
        "      <td>0</td>\n",
-       "      <td>241</td>\n",
+       "      <td>182</td>\n",
        "      <td>0</td>\n",
        "      <td>499</td>\n",
        "      <td>499</td>\n",
@@ -1285,35 +1313,35 @@
        "4     50  Half-Life: Opposing Force  Gearbox Software     Valve         NaN   \n",
        "\n",
        "   positive  negative  userscore                    owners  average_forever  \\\n",
-       "0    124948      3362          0  10,000,000 .. 20,000,000            12501   \n",
-       "1      3326       636          0   5,000,000 .. 10,000,000               35   \n",
-       "2      3433       402          0   5,000,000 .. 10,000,000              138   \n",
-       "3      1282       271          0   5,000,000 .. 10,000,000              114   \n",
-       "4      5280       293          0   5,000,000 .. 10,000,000              611   \n",
+       "0    124829      3352          0  10,000,000 .. 20,000,000             9582   \n",
+       "1      3325       637          0   5,000,000 .. 10,000,000              268   \n",
+       "2      3427       403          0   5,000,000 .. 10,000,000               90   \n",
+       "3      1281       271          0   5,000,000 .. 10,000,000               24   \n",
+       "4      5272       291          0   5,000,000 .. 10,000,000              215   \n",
        "\n",
        "   average_2weeks  median_forever  median_2weeks  price  initialprice  \\\n",
-       "0             659             151            912    999           999   \n",
-       "1               0              10              0    499           499   \n",
-       "2               0              58              0    499           499   \n",
-       "3               0               6              0    499           499   \n",
-       "4               0             241              0    499           499   \n",
+       "0             508             206            669    999           999   \n",
+       "1               0             356              0    499           499   \n",
+       "2               0               6              0    499           499   \n",
+       "3               0              34              0    499           499   \n",
+       "4               0             182              0    499           499   \n",
        "\n",
        "   discount                                          languages   genre    ccu  \\\n",
-       "0         0  English, French, German, Italian, Spanish - Sp...  Action  14027   \n",
-       "1         0  English, French, German, Italian, Spanish - Sp...  Action     73   \n",
-       "2         0  English, French, German, Italian, Spanish - Spain  Action    100   \n",
-       "3         0  English, French, German, Italian, Spanish - Sp...  Action      3   \n",
+       "0         0  English, French, German, Italian, Spanish - Sp...  Action  14984   \n",
+       "1         0  English, French, German, Italian, Spanish - Sp...  Action     77   \n",
+       "2         0  English, French, German, Italian, Spanish - Spain  Action    124   \n",
+       "3         0  English, French, German, Italian, Spanish - Sp...  Action     10   \n",
        "4         0                    English, French, German, Korean  Action     58   \n",
        "\n",
        "                                                tags  \n",
-       "0  {'Action': 2683, 'FPS': 2050, 'Multiplayer': 1...  \n",
-       "1  {'Action': 208, 'FPS': 188, 'Multiplayer': 172...  \n",
+       "0  {'Action': 2682, 'FPS': 2049, 'Multiplayer': 1...  \n",
+       "1                                                 []  \n",
        "2  {'FPS': 139, 'World War II': 123, 'Multiplayer...  \n",
        "3  {'Action': 85, 'FPS': 72, 'Multiplayer': 59, '...  \n",
        "4  {'FPS': 236, 'Action': 211, 'Sci-fi': 166, 'Si...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,9 +1357,11 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "We now have two tables of data with a variety of information about apps on the Steam store. From the Steam data it looks like we have some useful columns like `required_age`, `developers` and `genres` which we can eventually turn into features for analysis, and a `price_overview` column which may inform the success and sales of each game. The `owners` column of the SteamSpy data will definitely be useful, as well as `positive` and `negative` ratings, `average_forever` and `median_forever` play time, and `tags` (descriptions on [API reference](https://steamspy.com/api.php)).\n",
+    "Here we have defined and demonstrated the download process used to generate the data sets. This was completed separately but the full, raw data can be found [on Kaggle](https://kaggle.com/nikdavis/steam-store-raw).\n",
     "\n",
-    "The tables certainly aren't in a usable state for analysis right now, requiring cleaning and preparing which we will take care of in the next step: data cleaning."
+    "We now have two tables of data with a variety of information about apps on the Steam store. From the Steam data it looks like there are some useful columns like `required_age`, `developers` and `genres` which we can eventually turn into features for analysis, and a `price_overview` column which may inform the success and sales of each game. The `owners` column of the SteamSpy data could be useful, however the [margin of error](https://steamspy.com/about) means data may not be accurate enough for meaningful analysis, we'll have to see what we can manage after cleaning. Instead we may have to use the `positive` and `negative` ratings or average play-time to create our metrics. There is also a `tags` column which like has crossover with the `categories` and `genres` columns in the Steam data. We may wish to merge these, or keep one over the other.\n",
+    "\n",
+    "These are all decisions we'll come to in later stages of the project. With the data downloaded, this stage is now complete. In the next step, we'll take care of preparing and cleaning the data, readying a complete data set to use for analysis."
    ]
   }
  ],
